Fix Homepage network-data z-index issue

--- a/src/public/less/components/landing-bottom.less
+++ b/src/public/less/components/landing-bottom.less
@@ -478,6 +478,10 @@
 			}
 		}
 
+		.wrapper-lg {
+			z-index: 2;
+		}
+
 		.btn-link-to {
 			@media (min-width: @screen-sm-min) {
 				justify-content: center;
